--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="../images/orange.png">
   <title>Login</title>
   <!--CSS-->
   <link rel="stylesheet" type="text/css" href="css/style.css">
