refactorizando index.html

--- a/src/index.html
+++ b/src/index.html
@@ -23,21 +23,22 @@
       <article class="row">
         <!--LOGIN-->
         <div class="col-lg-5 col-sm-4">
-          <p class="logo">Mom to Mom
+          <p class="logo">
+            Mom to Mom
             <div class="slogan">rompiendo mitos</div>
           </p>
         </div>
         <!--EMAIL-->
         <div class="col-lg-3 col-sm-3">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
+            <label>Email</label>
             <input type="email" class="form-control" id="emailIngreso" aria-describedby="emailHelp" placeholder="Ingresa email">
           </div>
         </div>
         <!--CONTRASEÑA-->
         <div class="col-lg-3 col-sm-3">
           <div class="form-group">
-            <label for="exampleInputPassword1">Contraseña</label>
+            <label>Contraseña</label>
             <input type="password" class="form-control" id="passwordIngreso" placeholder="Ingresa Contraseña">
           </div>
         </div>
@@ -59,12 +60,12 @@
         <h4>Registrate</h4>
         <!--EMAIL-->
         <div class="form-group">
-          <label for="exampleInputEmail1">Email</label>
+          <label>Email</label>
           <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Ingresa email">
         </div>
         <!--CONTRASEÑA-->
         <div class="form-group">
-          <label for="exampleInputPassword1">Contraseña</label>
+          <label>Contraseña</label>
           <input type="password" class="form-control" id="password" placeholder="Ingresa Contraseña">
         </div>
         <!--BOTONES LOGIN REDES-->
@@ -73,10 +74,10 @@
           <button onclick="registrar()" type="submit" class="btn btn-primary boton-registrador">Registrar</button>
           <div style="text-align: center">o</div>
           <button onclick="loginGoogle()" type="submit" class="btn  boton-registrador google">
-            <img src="images/google-plus.png">Ingresar con Google
+            <img src="images/google-plus.png" alt="logo-google">Ingresar con Google
           </button>
           <button onclick="loginFace()" type="submit" class="btn boton-registrador google">
-            <img src="images/facebook.png">Ingresar con Facebook
+            <img src="images/facebook.png" alt="logo-face">Ingresar con Facebook
           </button>
         </div>
 
@@ -86,7 +87,8 @@
 
   <!--LOGIN movil-->
   <section class="movil">
-    <p class="logo">Mom to Mom
+    <p class="logo">
+      Mom to Mom
       <div class="slogan">rompiendo mitos</div>
     </p>
     <article class="sec-log">
