--- a/test/index.html
+++ b/test/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.1.0/mocha.min.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
   <body>
     <div id="mocha"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/4.1.0/mocha.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.1.2/chai.min.js"></script>
-    <script src="../src/data.js"></script>
+    <!-- <script src="../src/js/data.js"></script> el archivo a testear-->
+     <script src="../src/js/app-coment"></script>
     <script>
-      const { assert } = chai;
+      const {
+        assert
+      } = chai;
       mocha.setup('bdd');
     </script>
-    <script src=""></script>
-    <script src=""></script>
+     <script src="./data.spec.js"></script> 
     <script>
       mocha.checkLeaks();
       mocha.run();
     </script>
   </body>
+</body>
 </html>
